syntax = "proto3";

package rivet.backend.pkg.region.resolve_for_game;

import "resources/legacy/proto/common.proto";
import "resources/legacy/proto/backend/region.proto";

message Request {
	rivet.common.Uuid game_id = 1;
	repeated string name_ids = 2;
}

message Response {
	message Region {
		rivet.common.Uuid region_id = 1;
		string name_id = 2;
	}

	repeated Region regions = 1;
}
